# pico-ethernet-sensor

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yaml
src/: main.cpp
